--- a/stable/bitcoind/values.yaml
+++ b/stable/bitcoind/values.yaml
@@ -1,6 +1,9 @@
 # Default values for bitcoind.
 # This is a YAML-formatted file.
 # Declare variables to be passed into your templates.
+
+replicaCount: 1
+
 terminationGracePeriodSeconds: 30
 image:
   repository: arilot/docker-bitcoind
